tests/NormalTests/paczka1/fuzzy1/73206206.err
Error in line 2: 9ND S304 6,3
Error in line 8: A165 A932 93,5
Error in line 10: eP4Zy3Gg8 A842 61,6
Error in line 5: mrjF4mQ S304 58,4
Error in line 14: eP4Zy3Gg8 S304 36,6
Error in line 23: eP4Zy3Gg8 A932 -2,4
Error in line 31: LNZhx A165 59,2
Error in line 39: 9ND S304 9,1
